[tool.poetry]
name = "law-datagen"
version = "0.1.0"
description = "aframe datagen with law"
authors = ["Ethan Marx <emarx@mit.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "law_datagen"}]

[tool.poetry.dependencies]
python = "^3.9"
law = "^0.1.13"
luigi = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
